feat (user): add pickup/dropoff selection
